/*
 * Copyright (C) 2022 National Institute of Informatics
 *
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */

plugins {
    id 'java'
    id 'application'
    id "io.freefair.lombok" version "5.3.3.3"
}

sourceCompatibility = 1.11

version = '1.8.0'

repositories {
    flatDir {
        dirs "libs"
    }
    mavenCentral()
}

dependencies {
    implementation 'commons-cli:commons-cli:1.5.0'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
    implementation 'net.sinetstream:SINETStream-api:1.+'
    implementation 'net.sinetstream:SINETStream-kafka:1.+'
    implementation 'net.sinetstream:SINETStream-mqtt:1.+'
    implementation 'net.sinetstream:SINETStream-mqttv5:1.+'
    implementation 'net.sinetstream:SINETStream-s3:1.+'
    runtimeOnly 'org.slf4j:slf4j-nop:2.0.7'
    implementation group: 'org.yaml', name: 'snakeyaml', version: '1.33'

    compileOnly "org.projectlombok:lombok:1.18.26"
    annotationProcessor "org.projectlombok:lombok:1.18.26"

    if (true) {
        /* XXX: inject dependency when using flatDir */
        // api
        runtimeOnly group: 'org.yaml', name: 'snakeyaml', version: '1.33'
        runtimeOnly group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.70'
        runtimeOnly group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.70'
        runtimeOnly group: 'org.apache.commons', name: 'commons-text', version: '1.10.0'
        runtimeOnly group: 'org.apache.commons', name: 'commons-rng-simple', version: '1.5'
        runtimeOnly group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.4'
        runtimeOnly group: 'org.apache.avro', name: 'avro', version: '1.11.1'
        runtimeOnly 'javax.xml.bind:jaxb-api:2.3.1'
        runtimeOnly 'com.sun.xml.bind:jaxb-core:4.0.2'
        runtimeOnly 'com.sun.xml.bind:jaxb-impl:4.0.2'
        runtimeOnly 'javax.activation:javax.activation-api:1.2.0'
        runtimeOnly group: 'org.jdeferred.v2', name: 'jdeferred-core', version: '2.0.0'
        runtimeOnly 'com.google.http-client:google-http-client:1.43.1'
        runtimeOnly 'com.google.http-client:google-http-client-gson:1.43.1'

        //plugin-kafka
        runtimeOnly group: 'org.apache.kafka', name: 'kafka-clients', version: '3.4.0'
        runtimeOnly group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
        runtimeOnly group: 'org.jdeferred.v2', name: 'jdeferred-core', version: '2.0.0'

        //plugin-mqtt
        runtimeOnly group: 'org.eclipse.paho', name: 'org.eclipse.paho.client.mqttv3', version: '1.2.5'
        runtimeOnly group: 'org.jdeferred.v2', name: 'jdeferred-core', version: '2.0.0'

        //plugin-mqttv5
        runtimeOnly 'org.eclipse.paho:org.eclipse.paho.mqttv5.client:1.2.5'
        runtimeOnly group: 'org.jdeferred.v2', name: 'jdeferred-core', version: '2.0.0'

        //plugin-s3
        runtimeOnly platform('software.amazon.awssdk:bom:2.20.33')
        runtimeOnly 'software.amazon.awssdk:s3'
    }
}

application {
    mainClassName = 'jp.ad.sinet.stream.example.cli.CliMain'
    applicationName = 'sinetstream_cli'

    // WORKAROUND for:
    //     WARNING: An illegal reflective access operation has occurred
    //     WARNING: Illegal reflective access by org.eclipse.paho.client.mqttv3.internal.FileLock
    // see https://github.com/eclipse/paho.mqtt.java/issues/507#issuecomment-814681499
    applicationDefaultJvmArgs = ['--add-opens=java.base/sun.nio.ch=ALL-UNNAMED']
}

applicationDistribution.into("bin") {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    //from(createExtraRunApp)
    fileMode = 0755
}
